Update Dockerfile to auto-run Claude setup on container start

--- a/railway-setup/Dockerfile
+++ b/railway-setup/Dockerfile
@@ -27,37 +27,22 @@ RUN npm install -g @anthropic-ai/claude-code
 
 # Create startup script inline (avoids COPY path issues)
 RUN echo '#!/bin/bash\n\
-echo "🚂 Railway Claude Code Server Starting..."\n\
+echo "🚂 Railway Claude Code - Auto Setup Starting..."\n\
 \n\
+# Clone or update repo\n\
 if [ ! -d "/app/Midnight_Code" ]; then\n\
     echo "📦 Cloning repository..."\n\
     git clone https://github.com/${GITHUB_ORG:-ZigToggle}/${GITHUB_REPO:-Midnight_Code}.git /app/Midnight_Code\n\
-    cd /app/Midnight_Code\n\
 else\n\
-    echo "✅ Repository already cloned"\n\
-    cd /app/Midnight_Code\n\
-    git pull origin main\n\
+    echo "📦 Updating repository..."\n\
+    cd /app/Midnight_Code && git pull origin main\n\
 fi\n\
 \n\
-git config --global user.email "${GIT_EMAIL:-claude-bot@railway.app}"\n\
-git config --global user.name "${GIT_NAME:-Claude Code Bot}"\n\
+cd /app/Midnight_Code\n\
 \n\
-echo "✅ Setup complete!"\n\
-echo ""\n\
-echo "🤖 To start Claude Code:"\n\
-echo "   1. Connect: railway shell"\n\
-echo "   2. Configure git: git config --global user.email ..."\n\
-echo "   3. Auth GitHub: gh auth login"\n\
-echo "   4. Start Claude: claude"\n\
-echo "   5. Start Ralph: /ralph-loop"\n\
-echo ""\n\
-echo "⚙️  ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:+✓ Set}${ANTHROPIC_API_KEY:-✗ Not set - add in Railway Variables}"\n\
-echo ""\n\
-echo "📍 Current directory: $(pwd)"\n\
-echo "📁 Repository ready at: /app/Midnight_Code"\n\
-echo ""\n\
-\n\
-tail -f /dev/null' > /app/start.sh && chmod +x /app/start.sh
+echo "🚀 Running automated setup..."\n\
+bash railway-setup/auto-setup.sh\n\
+' > /app/start.sh && chmod +x /app/start.sh
 
 # Expose port (Railway requirement)
 EXPOSE 8080
